--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,6 +10,7 @@
     "db:seed": "bunx prisma db seed"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.3.3",
     "@prisma/client": "^6.14.0",
     "elysia": "latest",
     "zod": "^4.1.3"
