--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 # === Dependencies ===
 node_modules/
-bun.lockb
+apps/*/node_modules/
+
+# Turborepo cache
+.turbo/
 
 # === Build outputs ===
 dist/
 build/
+apps/*/dist/
+apps/*/build/
 .out/
 .temp/
 
